@@ -3704,14 +3704,14 @@ EXTERN int		Tcl_ZlibInflate (Tcl_Interp * interp, int format,
 #ifndef Tcl_ZlibCRC32_TCL_DECLARED
 #define Tcl_ZlibCRC32_TCL_DECLARED
 /* 612 */
-EXTERN unsigned int	Tcl_ZlibCRC32 (unsigned int crc, const char * buf,
-				int len);
+EXTERN unsigned int	Tcl_ZlibCRC32 (unsigned int crc,
+				const unsigned char * buf, int len);
 #endif
 #ifndef Tcl_ZlibAdler32_TCL_DECLARED
 #define Tcl_ZlibAdler32_TCL_DECLARED
 /* 613 */
 EXTERN unsigned int	Tcl_ZlibAdler32 (unsigned int adler,
-				const char * buf, int len);
+				const unsigned char * buf, int len);
 #endif
 #ifndef Tcl_ZlibStreamInit_TCL_DECLARED
 #define Tcl_ZlibStreamInit_TCL_DECLARED
@@ -4446,8 +4446,8 @@ typedef struct TclStubs {
     void (*tcl_BackgroundException) (Tcl_Interp * interp, int code); /* 609 */
     int (*tcl_ZlibDeflate) (Tcl_Interp * interp, int format, Tcl_Obj * data, int level, Tcl_Obj * gzipHeaderDictObj); /* 610 */
     int (*tcl_ZlibInflate) (Tcl_Interp * interp, int format, Tcl_Obj * data, int buffersize, Tcl_Obj * gzipHeaderDictObj); /* 611 */
-    unsigned int (*tcl_ZlibCRC32) (unsigned int crc, const char * buf, int len); /* 612 */
-    unsigned int (*tcl_ZlibAdler32) (unsigned int adler, const char * buf, int len); /* 613 */
+    unsigned int (*tcl_ZlibCRC32) (unsigned int crc, const unsigned char * buf, int len); /* 612 */
+    unsigned int (*tcl_ZlibAdler32) (unsigned int adler, const unsigned char * buf, int len); /* 613 */
     int (*tcl_ZlibStreamInit) (Tcl_Interp * interp, int mode, int format, int level, Tcl_Obj * dictObj, Tcl_ZlibStream * zshandle); /* 614 */
     Tcl_Obj * (*tcl_ZlibStreamGetCommandName) (Tcl_ZlibStream zshandle); /* 615 */
     int (*tcl_ZlibStreamEof) (Tcl_ZlibStream zshandle); /* 616 */
